minio/minio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: kommander-traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: kommander-stripprefixes-kibana@kubernetescrd
  labels:
    app: minio
  name: minio-ingress
  namespace: nifi
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: minio
            port:
              number: 80
        path: /minio
        pathType: Prefix
